--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,10 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '${Agent.BuildDirectory}/Checker/checker-starter/target'
+    Contents: '*.jar'
+    TargetFolder: 'C:/Checker'
+    CleanTargetFolder: true
+    OverWrite: true
