--- a/Tests/SSM/Cases/SSM_SAP.yaml
+++ b/Tests/SSM/Cases/SSM_SAP.yaml
@@ -1,5 +1,7 @@
 id: SSM_SAP
 name: Тесты формы 'Заказы SAP'
+constants:
+  environment: SAP_ORDERS
 app:
   location: Z:\bin\SSM.exe
   arguments: [-pp]
