--- a/Tests/SSM/Cases/SSM_SAP.yaml
+++ b/Tests/SSM/Cases/SSM_SAP.yaml
@@ -3,9 +3,10 @@ name: Тесты формы 'Заказы SAP'
 constants:
   environment: SAP_ORDERS
 app:
+  name: MES Тяжмаш
   location: Z:\bin\SSM.exe
   arguments: [-pp]
-  preStart: false
+  preStart: true
   stayAlive: true
   windows:
     - path: ORDER_PRB.yaml
