--- a/Tests/SSM/Forms/SAP_ORDERS.yaml
+++ b/Tests/SSM/Forms/SAP_ORDERS.yaml
@@ -5,6 +5,12 @@ search:
   Name: Тяжмаш MES - PREPROD-Заказы SAP
 elements:
   - element:
+        id: ssm_01_04
+        name: Таблица 'Задания ПРБ'
+        index: 0
+        search:
+          ClassName: TcxGridSite
+  - element:
       id: ssm_01_03
       name: Таблица 'Выпуск продукции по заказу'
       index: 0
