--- a/checker-starter/pom.xml
+++ b/checker-starter/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>checker-reporter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.stephenc.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
