--- a/checker-starter/pom.xml
+++ b/checker-starter/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>checker-tests-ssm</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>ru.checker</groupId>
             <artifactId>checker-reporter</artifactId>
