--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -1,8 +1,8 @@
 name: SSM
 location: Z:\bin\SSM.exe
 arguments: [ -pp ]
-preStart: true
-stayAlive: false
+preStart: false
+stayAlive: true
 windows:
   - path: ORDER_MASTER_PRB.yaml
   - path: ORDER_PRB.yaml
