--- a/Tests/SSM/Windows/Root.yaml
+++ b/Tests/SSM/Windows/Root.yaml
@@ -11,6 +11,7 @@ elements:
 forms:
   - path: PRODUCT_RELEASE.yaml
   - path: SAP_ORDERS.yaml
+  - path: ORGANIZATION_DIRECTORY.yaml
 widgets:
   - path: SSM_TOOLS.yaml
   - path: SSM_NAVIGATION.yaml
