--- a/Tests/SSM/Windows/Root.yaml
+++ b/Tests/SSM/Windows/Root.yaml
@@ -12,6 +12,7 @@ forms:
   - path: PRODUCT_RELEASE.yaml
   - path: SAP_ORDERS.yaml
   - path: ORGANIZATION_DIRECTORY.yaml
+  - path: SHOP_DETAILS.yaml
 widgets:
   - path: SSM_TOOLS.yaml
   - path: SSM_NAVIGATION.yaml
