Изменено 1) Работа с тестом SSMG0102P02 #113144

--- a/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
+++ b/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
@@ -10,8 +10,10 @@ widgets:
 elements:
   - element:
       id: filtered_table
-      name: Таблица 'Операции'
+      name: Таблица 'Задания ОТК'
       index: 1
+      config:
+        unfocused: [C]
       search:
         ClassName: TcxGridSite
   - element:
