Изменено 1) Написаны тесты SSMG0101P01, SSMG0101P02 2) Добавлен поиск надписей полей #121957 #121971

--- a/Tests/SSM/Windows/RELEASE_PRODUCT_POPUP.yaml
+++ b/Tests/SSM/Windows/RELEASE_PRODUCT_POPUP.yaml
@@ -6,24 +6,13 @@ search:
 elements:
   - element:
       id: product01
+      label: fff
       name: Поле 'Количество'
       search:
         ClassName: TcxCustomInnerTextEdit
   - element:
-      id: prb_03
+      id: ok_button
       name: Кнопка 'Ок'
       search:
         ClassName: TcxButton
         Name: OK
-  - element:
-      id: prb_02
-      name: Панель 'Мастер'
-      search:
-        ClassName: TcxGroupBox
-        Name:           МАСТЕР
-  - element:
-      id: prb_01
-      name: Поле 'Планируемое'
-      label: Планируемое
-      search:
-        ClassName: TcxCustomInnerTextEdit
