--- a/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
+++ b/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
@@ -17,26 +17,8 @@ elements:
       search:
         ClassName: TcxGridSite
   - element:
-        id: ssm_01_04
-        name: Таблица 'Задания ПРБ'
+        id: operation_table
+        name: Таблица 'Подтвержденые операции'
         index: 0
         search:
           ClassName: TcxGridSite
-  - element:
-      id: ssm_01_03
-      name: Таблица 'Выпуск продукции по заказу'
-      index: 0
-      search:
-        ClassName: TcxGridSite
-  - element:
-      id: ssm_01_02
-      name: Таблица 'Мастера'
-      index: 2
-      search:
-        ClassName: TcxGridSite
-  - element:
-      id: ssm_01_01
-      name: Таблица 'Производственные заказы'
-      index: 3
-      search:
-        ClassName: TcxGridSite
