Изменено 1) Добавлен пункт нужды проверки формы('needCheck') перед стартом теста. Данное изменение связано с формой "Заказы SAP" и всплывающим окном #122091

--- a/Tests/SSM/Forms/SAP_ORDERS.yaml
+++ b/Tests/SSM/Forms/SAP_ORDERS.yaml
@@ -1,9 +1,10 @@
 id: mf
 name: Заказы SAP
+needCheck: false
+navigation: SAP_ORDERS
 search:
   ClassName: TcxTabSheet
   Name: Тяжмаш MES - PREPROD-Заказы SAP
-navigation: SAP_ORDERS
 widgets:
   - path: SSM_PAGING.yaml
   - path: SSM_TOOLS.yaml
