Изменено 1) Написаны тесты SSM.G.01.02.P.01.01 и SSM.G.01.02.P.01.02 2) Изменен глубокий поиск окна 3) Добавлен поиск полей и кастомных элементов по их надписи(пункт в конфигурациях 'label') 4) Добавлена обертка для окон 5) Написаны обработчики для окна 'Фильтр' формы 'заказы SAP' Работа: #113164 #122969 #122967 #121974

--- a/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
+++ b/Tests/SSM/Forms/PRODUCT_RELEASE.yaml
@@ -19,6 +19,8 @@ elements:
   - element:
         id: operation_table
         name: Таблица 'Подтвержденые операции'
+        config:
+          unfocused: [ СН ]
         index: 0
         search:
           ClassName: TcxGridSite
