--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -4,6 +4,7 @@ arguments: [ -pp ]
 preStart: false
 stayAlive: true
 windows:
+  - path: SAP/SAP_FILTER.yaml
   - path: RELEASE_PRODUCT_POPUP.yaml
   - path: ORDER_MASTER_PRB.yaml
   - path: ORDER_PRB.yaml
