Изменено 1) Устранена критическая ошибка -1073740940 2) Изменение получение и конвертирование в обертку форму 3) Добавлены группы для пропуска(broken, InWork) 4) Изменен аттрибут 'duration-ms' на 'duration' для отображения в Azure время тестового случая
Работа:
#123315

--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -1,8 +1,8 @@
 name: SSM
 location: Z:\bin\SSM.exe
 arguments: [ -pp ]
-preStart: false
-stayAlive: true
+preStart: true
+stayAlive: false
 windows:
   - path: SAP/SAP_FILTER.yaml
   - path: RELEASE_PRODUCT_POPUP.yaml
