Изменено 1) Добавлена возможность вставить дополнительные вложения 2) Слушатель тестов и создан appenders для логирования в модуле tfs adapter 3) Добавлена механика получение элемента из кеша 4) Добавлены логи 5) Добавлена механика графических эталонов 6) Исправлены поиск элементов для устранения ошибки -1073741819
Работа:
#124174

--- a/Tests/SSM/Windows/SAP/SAP_FILTER.yaml
+++ b/Tests/SSM/Windows/SAP/SAP_FILTER.yaml
@@ -36,7 +36,7 @@ elements:
       search:
         ClassName: TcxCustomComboBoxInnerEdit
   - element:
-      id: field_lotsman_oreder
+      id: field_lotsman_order
       name: Поле 'Заказ Лоцман'
       label: Заказ Лоцман
       search:
