--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -4,6 +4,7 @@ arguments: [ -pp ]
 preStart: true
 stayAlive: false
 windows:
+  - path: SAP/SAP_FILTER_LOTSMAN.yaml
   - path: SAP/SAP_FILTER.yaml
   - path: RELEASE_PRODUCT_POPUP.yaml
   - path: ORDER_MASTER_PRB.yaml
