--- a/checker-adapters/checker-tfs-adapter/pom.xml
+++ b/checker-adapters/checker-tfs-adapter/pom.xml
@@ -11,4 +11,18 @@
 
     <artifactId>checker-tfs-adapter</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.checker</groupId>
+            <artifactId>checker-reporter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.stephenc.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
