Изменено 1) Добавлена возможность менять индекс увеличения изображения для распознования текста 2) Добавлена функция переключения вкладок в таблице ССМ 3) Написан тест SSMG0102P02
Работа:
#124199

--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -1,8 +1,8 @@
 name: SSM
 location: Z:\bin\SSM.exe
 arguments: [ -pp ]
-preStart: true
-stayAlive: false
+preStart: false
+stayAlive: true
 windows:
   - path: SAP/SAP_FILTER_LOTSMAN.yaml
   - path: SAP/SAP_FILTER.yaml
