Изменено 1) Добавлены обработчики для окна "Задания ПРБ - создание" 2) Добавлены обработчики для окна "Выбор мастера" задания ПРБ 3) Добавлены логи 4) Вынесены общие методы 5) Написан тест SSMG0102P04 6) Изменены некоторые шаги теста SSMG0102P02 на общие методы
Работа:
#124529

--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -6,8 +6,8 @@ stayAlive: true
 windows:
   - path: SAP/SAP_FILTER_LOTSMAN.yaml
   - path: SAP/SAP_FILTER.yaml
+  - path: SAP/ORDER_PRB.yaml
+  - path: SAP/ORDER_MASTER_PRB.yaml
   - path: RELEASE_PRODUCT_POPUP.yaml
-  - path: ORDER_MASTER_PRB.yaml
-  - path: ORDER_PRB.yaml
   - path: Root.yaml
   - path: SHOP_DETAILS.yaml
