Изменено 1) Добавлено взаимодействие с мышью, клавиатурой и дисплеем. 2) Добавлены методы для работы с вкладками 3) Написан тест SSMG0102P05 4) Добавлены действия на форме "Заказы SAP" 5) Исправлена сверка даты в тесте SSMG01P02 Работа: #127385 #127386

--- a/Tests/SSM/Forms/SAP_ORDERS.yaml
+++ b/Tests/SSM/Forms/SAP_ORDERS.yaml
@@ -41,3 +41,11 @@ elements:
         unfocused: [ С, Н, Т ]
       search:
         ClassName: TcxGridSite
+  - element:
+      id: sap_lotsman_grid
+      name: Таблица 'Заказы Лоцман'
+      index: 0
+      config:
+        unfocused: [ С, Н, Т ]
+      search:
+        ClassName: TcxGridSite
