Изменено 1) Работа с фильтрами таблицы 2) Работа с вкладками таблицы 3) Работа по считыванию и проврки данных таблицы 4) Добавлен кеш элементов 5) Добавлены инструменты работы с OCR 6) Написаны обработчики модуля "Справочник организации" 7) написан тест SSMG0103P01 Работа: #113181 #128749

--- a/Tests/SSM/Forms/ORGANIZATION_DIRECTORY.yaml
+++ b/Tests/SSM/Forms/ORGANIZATION_DIRECTORY.yaml
@@ -9,7 +9,20 @@ widgets:
   - path: SSM_TOOLS.yaml
 elements:
   - element:
-      id: data_table
+      id: org_data_table
       name: Таблица
+      config:
+        header_count: 0
+        unfocused: [ 0 ]
+        has_scroll_bar: false
+        max_wait_delay: 20
+      filters:
+        - filter:
+            id: number_filter
+            condition1: EQUAL
+            value1: 2
+            column: Номер
+            columnIndexReference: 1
+            columnCondition: "{1}[Нн]омер"
       search:
         ClassName: TcxGridSite
