--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -4,10 +4,12 @@ arguments: [ -pp ]
 preStart: false
 stayAlive: true
 windows:
+  - path: Root.yaml
+  - path: CORE/FILTER_DIALOG.yaml
+  - path: CORE/CONFIRM_WINDOW.yaml
   - path: SAP/SAP_FILTER_LOTSMAN.yaml
   - path: SAP/SAP_FILTER.yaml
   - path: SAP/ORDER_PRB.yaml
   - path: SAP/ORDER_MASTER_PRB.yaml
-  - path: RELEASE_PRODUCT_POPUP.yaml
-  - path: Root.yaml
-  - path: SHOP_DETAILS.yaml
+  - path: PRODUCT/RELEASE_PRODUCT_POPUP.yaml
+  - path: ORGANIZATION/SHOP_DETAILS.yaml
