--- a/Tests/SSM/Windows/SAP/ORDER_MASTER_PRB.yaml
+++ b/Tests/SSM/Windows/SAP/ORDER_MASTER_PRB.yaml
@@ -8,6 +8,8 @@ elements:
       id: prb_master_grid
       name: Таблица 'Мастера'
       index: 0
+      config:
+        has_selection_bar: false
       search:
         ClassName: TcxGridSite
   - element:
