--- a/Tests/SSM/Windows/CORE/Root.yaml
+++ b/Tests/SSM/Windows/CORE/Root.yaml
@@ -13,6 +13,7 @@ forms:
   - path: PRODUCT_RELEASE.yaml
   - path: SAP_ORDERS.yaml
   - path: ORGANIZATION_DIRECTORY.yaml
+  - path: TASK_CONTROL.yaml
 widgets:
   - path: SSM_TOOLS.yaml
   - path: SSM_NAVIGATION.yaml
