--- a/Tests/SSM/Windows/PRODUCT/RELEASE_PRODUCT_POPUP.yaml
+++ b/Tests/SSM/Windows/PRODUCT/RELEASE_PRODUCT_POPUP.yaml
@@ -5,14 +5,26 @@ search:
   ClassName: TfProd
 elements:
   - element:
-      id: product01
-      label: fff
-      name: Поле 'Количество'
+      id: product_release_invoice_number
+      label: Номер накладной
+      name: Поле 'Номер накладной'
       search:
         ClassName: TcxCustomInnerTextEdit
   - element:
-      id: ok_button
+      id: product_release_count
+      label: Выпустить
+      name: Поле 'Выпустить, шт'
+      search:
+        ClassName: TcxCustomInnerTextEdit
+  - element:
+      id: button_ok
       name: Кнопка 'Ок'
       search:
         ClassName: TcxButton
         Name: OK
+  - element:
+      id: button_cancel
+      name: Кнопка 'Отмена'
+      search:
+        ClassName: TcxButton
+        Name: Отмена
