--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -4,7 +4,7 @@ arguments: [ -pp ]
 preStart: false
 stayAlive: true
 windows:
-  - path: Root.yaml
+  - path: CORE/Root.yaml
   - path: CORE/FILTER_DIALOG.yaml
   - path: CORE/CONFIRM_WINDOW.yaml
   - path: SAP/SAP_FILTER_LOTSMAN.yaml
@@ -13,3 +13,4 @@ windows:
   - path: SAP/ORDER_MASTER_PRB.yaml
   - path: PRODUCT/RELEASE_PRODUCT_POPUP.yaml
   - path: ORGANIZATION/SHOP_DETAILS.yaml
+  - path: TASK/TASK_FILTER.yaml
