--- a/Tests/SSM/application/config.yaml
+++ b/Tests/SSM/application/config.yaml
@@ -1,8 +1,8 @@
 name: SSM
 location: Z:\bin\SSM.exe
 arguments: [ -pp ]
-preStart: false
-stayAlive: true
+preStart: true
+stayAlive: false
 windows:
   - path: CORE/Root.yaml
   - path: CORE/FILTER_DIALOG.yaml
